fix: remove horizontal overflow issue on phones

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
-html {
-    overflow: scroll;
+html, body {
+    width: 100%;
+    overflow-y: scroll;
     overflow-x: hidden;
 }
 ::-webkit-scrollbar {
